TONS of refactorying for Blackberry.