@@ -1,16 +1,38 @@
+/*
+ ###############################################################################
+ #                                                                             #
+ #    Copyright (C) 2011-2012 OpenMEAP, Inc.                                   #
+ #    Credits to Jonathan Schang & Robert Thacher                              #
+ #                                                                             #
+ #    Released under the LGPLv3                                                #
+ #                                                                             #
+ #    OpenMEAP is free software: you can redistribute it and/or modify         #
+ #    it under the terms of the GNU Lesser General Public License as published #
+ #    by the Free Software Foundation, either version 3 of the License, or     #
+ #    (at your option) any later version.                                      #
+ #                                                                             #
+ #    OpenMEAP is distributed in the hope that it will be useful,              #
+ #    but WITHOUT ANY WARRANTY; without even the implied warranty of           #
+ #    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
+ #    GNU Lesser General Public License for more details.                      #
+ #                                                                             #
+ #    You should have received a copy of the GNU Lesser General Public License #
+ #    along with OpenMEAP.  If not, see <http://www.gnu.org/licenses/>.        #
+ #                                                                             #
+ ###############################################################################
+ */
+
 package com.openmeap.thinclient.update;
 
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.security.NoSuchAlgorithmException;
 import java.util.Date;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
 
-import com.openmeap.util.HttpResponse;
-
+import com.openmeap.http.HttpRequestException;
+import com.openmeap.http.HttpRequestExecuter;
+import com.openmeap.http.HttpRequestExecuterFactory;
+import com.openmeap.http.HttpResponse;
 import com.openmeap.protocol.ApplicationManagementService;
 import com.openmeap.protocol.WebServiceException;
 import com.openmeap.protocol.dto.Application;
@@ -21,10 +43,9 @@ import com.openmeap.protocol.dto.SLIC;
 import com.openmeap.protocol.dto.UpdateHeader;
 import com.openmeap.thinclient.AppMgmtClientFactory;
 import com.openmeap.thinclient.LocalStorage;
+import com.openmeap.thinclient.LocalStorageException;
 import com.openmeap.thinclient.SLICConfig;
-import com.openmeap.util.HttpRequestException;
-import com.openmeap.util.HttpRequestExecuter;
-import com.openmeap.util.HttpRequestExecuterFactory;
+import com.openmeap.util.GenericRuntimeException;
 import com.openmeap.util.Utils;
 
 /**
@@ -37,7 +58,7 @@ public class UpdateHandler {
 	private SLICConfig config = null;
 	private LocalStorage storage = null;
 	private Object interruptLock = new Object();
-	private Boolean interrupt = Boolean.valueOf(false);
+	private Boolean interrupt = Boolean.FALSE;
 	
 	public UpdateHandler(SLICConfig config, LocalStorage storage) {
 		this.setSLICConfig(config);
@@ -54,7 +75,7 @@ public class UpdateHandler {
 	public UpdateHeader checkForUpdate() throws WebServiceException {
 		// we'll go ahead and flip the flag that we tried to update now
     	// at the beginning of our intent
-		config.setLastUpdateAttempt(Long.valueOf(new Date().getTime()));
+		config.setLastUpdateAttempt(new Long(new Date().getTime()));
 		
 		// put together the communication coordination request
     	ConnectionOpenRequest request = getConnectionOpenRequest();
@@ -145,20 +166,20 @@ public class UpdateHandler {
 				_handleUpdate(update,eventHandler);
 			} catch(UpdateException ue) {
 				config.setLastUpdateResult(ue.getUpdateResult().toString());
-				throw new RuntimeException(ue);
+				throw new GenericRuntimeException(ue);
 			}
 		}
 	}
 	
 	public void clearInterruptFlag() {
 		synchronized(interruptLock) {
-			interrupt = Boolean.valueOf(false);
+			interrupt = Boolean.FALSE;
 		}
 	}
 	
 	public void interruptRunningUpdate() {
 		synchronized(interruptLock) {
-			interrupt = Boolean.valueOf(true);
+			interrupt = Boolean.TRUE;
 		}
 	}
 	
@@ -196,54 +217,45 @@ public class UpdateHandler {
 			if( ! downloadToArchive(update, eventHandler).booleanValue() ) {
 				return;
 			}
-		} catch( IOException ioe ) {
+		} catch( Exception ioe ) {
 			// TODO: whether this is a deal breaker or not should be configurable.  client should have the ability to override default behavior.  default behavior should be informative
 			throw new UpdateException(UpdateResult.IO_EXCEPTION,"May need more space to install than is available",ioe);
 		} 
 		
-		try {
-			 
-			if( ! archiveIsValid(update).booleanValue() ) {
-				throw new UpdateException(UpdateResult.HASH_MISMATCH,"hash value of update does not match file hash value");
-			}
-				
-			
-			installArchive(update);
-			
-			config.setLastUpdateResult(UpdateResult.SUCCESS.toString());
-			
-			// at this point, the archive should be of no use to us
-			storage.deleteImportArchive();
-			
-			// delete the content at the old internal storage prefix
-			// TODO: decide whether this should be done pending notifying of the update or not
-			config.setApplicationVersion(update.getUpdateHeader().getVersionIdentifier());
-			config.setArchiveHash(update.getUpdateHeader().getHash().getValue());
-			
-			storage.resetStorage();
-			
-			String newPrefix = "com.openmeap.storage."+update.getUpdateHeader().getHash().getValue();
-			config.setStorageLocation(newPrefix);
-
-			config.setApplicationUpdated(Boolean.TRUE);
-			
-			if( eventHandler!=null ) { 
-				update.setComplete(true);
-	        	eventHandler.onStatusChange(update);
-	        }
-
-		} catch( IOException ioe ) {
-			// TODO: leave it up the customer to determine how to handle this.
-			throw new UpdateException(UpdateResult.IO_EXCEPTION,"An IOException occurred",ioe);
-		} catch( NoSuchAlgorithmException nsae ) {
-			throw new UpdateException(UpdateResult.PLATFORM,"The Java platform of the device does not support the hash algorithm used.",nsae);
+		if( ! archiveIsValid(update).booleanValue() ) {
+			throw new UpdateException(UpdateResult.HASH_MISMATCH,"hash value of update does not match file hash value");
 		}
+			
+		
+		installArchive(update);
+		
+		config.setLastUpdateResult(UpdateResult.SUCCESS.toString());
+		
+		// at this point, the archive should be of no use to us
+		storage.deleteImportArchive();
+		
+		// delete the content at the old internal storage prefix
+		// TODO: decide whether this should be done pending notifying of the update or not
+		config.setApplicationVersion(update.getUpdateHeader().getVersionIdentifier());
+		config.setArchiveHash(update.getUpdateHeader().getHash().getValue());
+		
+		storage.resetStorage();
+		
+		String newPrefix = "com.openmeap.storage."+update.getUpdateHeader().getHash().getValue();
+		config.setStorageLocation(newPrefix);
+
+		config.setApplicationUpdated(Boolean.TRUE);
+		
+		if( eventHandler!=null ) { 
+			update.setComplete(true);
+        	eventHandler.onStatusChange(update);
+        }
 	}
 	
 	public Boolean deviceHasEnoughSpace(UpdateStatus update) {
 		// test to make sure the device has enough space for the installation
 		Long avail = storage.getBytesFree();
-		return Boolean.valueOf(avail.compareTo(update.getUpdateHeader().getInstallNeeds()) > 0); 
+		return new Boolean(avail.equals(update.getUpdateHeader().getInstallNeeds())); 
 	}
 	
 	/**
@@ -253,7 +265,7 @@ public class UpdateHandler {
 	 * @return true if completed, false if interrupted
 	 * @throws IOException
 	 */
-	public Boolean downloadToArchive(UpdateStatus update, StatusChangeHandler eventHandler) throws UpdateException, IOException {
+	public Boolean downloadToArchive(UpdateStatus update, StatusChangeHandler eventHandler) throws UpdateException {
 		// download the file to import.zip
 		OutputStream os = null;
 		InputStream is = null;
@@ -262,7 +274,7 @@ public class UpdateHandler {
 		try {
 			updateRequestResponse = requester.get(update.getUpdateHeader().getUpdateUrl());
 		} catch(HttpRequestException e){
-			throw new IOException(e);
+			throw new UpdateException(UpdateResult.IO_EXCEPTION,"An issue occurred fetching the update archive",e);
 		}
 		if( updateRequestResponse.getStatusCode()!=200 )
 			throw new UpdateException(UpdateResult.RESPONSE_STATUS_CODE,"Status was "+updateRequestResponse.getStatusCode()+", expecting 200" );
@@ -294,9 +306,17 @@ public class UpdateHandler {
 		        	}
 	        	}
 	        }
+		} catch(IOException lse) {
+			throw new UpdateException(UpdateResult.IO_EXCEPTION,"",lse);
+		} catch(LocalStorageException lse) {
+			throw new UpdateException(UpdateResult.IO_EXCEPTION,"",lse);
 		} finally {
-			os.close();
-			is.close();
+			try {
+				os.close();
+				is.close();
+			} catch (IOException e) {
+				throw new UpdateException(UpdateResult.IO_EXCEPTION,"",e);
+			}
 			
 			// have to hang on to the requester till the download is complete,
 			// so that we can retain control over when the connection manager shut's down
@@ -305,68 +325,36 @@ public class UpdateHandler {
 		return Boolean.TRUE;
 	}
 	
-	public Boolean archiveIsValid(UpdateStatus update) throws IOException, NoSuchAlgorithmException {
-		// validate the zip file against the hash of the response
-		InputStream fis = storage.getImportArchiveInputStream();
+	public Boolean archiveIsValid(UpdateStatus update) throws UpdateException {
 		try {
-			String hashValue = Utils.hashInputStream(
-					update.getUpdateHeader().getHash().getAlgorithm().value(), fis);
-			
-			// TODO: handle hash validation failure differently
-			
-			if( !hashValue.equals(update.getUpdateHeader().getHash().getValue()) ) {
-				return Boolean.FALSE;
+			// validate the zip file against the hash of the response
+			InputStream fis = storage.getImportArchiveInputStream();
+			try {
+				String hashValue = Utils.hashInputStream(update.getUpdateHeader().getHash().getAlgorithm().value(), fis);
+				if( !hashValue.equals(update.getUpdateHeader().getHash().getValue()) ) {
+					return Boolean.FALSE;
+				}
+				return Boolean.TRUE;
+			} finally {
+				fis.close();
 			}
-			return Boolean.TRUE;
-		} finally {
-			fis.close();
+		} catch(Exception e) {
+			throw new UpdateException(UpdateResult.UNDEFINED,"",e);
 		}
 	}
 	
-	public void installArchive(UpdateStatus update) throws UpdateException, IOException {
-		
-		// at this point, we've verified that:
-		//   1) we have enough space on the device
-		//   2) the archive downloaded is what was expected
-
-		ZipInputStream zis = null;
-		String newPrefix = "com.openmeap.storage."+update.getUpdateHeader().getHash().getValue();
+	public void installArchive(UpdateStatus update) throws UpdateException {
 		try {
-			zis = new ZipInputStream( storage.getImportArchiveInputStream() );
-		    ZipEntry ze;
-		    while ((ze = zis.getNextEntry()) != null) {
-		    	if( ze.isDirectory() )
-		    		continue;
-		        FileOutputStream baos = storage.openFileOutputStream(newPrefix,ze.getName());
-		        try {
-		        	byte[] buffer = new byte[1024];
-		        	int count;
-		        	while ((count = zis.read(buffer)) != -1) {
-		        		baos.write(buffer, 0, count);
-		        	}
-		        }
-		        catch( Exception e ) {
-		        	;// TODO: something, for the love of god.
-		        }
-		        finally {
-		        	baos.close();
-		        }
-		    }
-		} catch( IOException e ) {
-			
-			// delete the recently unzipped assets
-			
-			throw new UpdateException(UpdateResult.IMPORT_UNZIP,"Failed to extract import archive.",e);
-		} finally {
-			if( zis!=null )
-				zis.close();
+			storage.unzipImportArchive(update);
+		} catch (LocalStorageException e) {
+			throw new UpdateException(UpdateResult.IO_EXCEPTION,"",e);
 		}
 	}
 	
 	private boolean hasUpdatePendingTimedOut() {
 		Integer pendingTimeout = config.getUpdatePendingTimeout();
 		Long lastAttempt = config.getLastUpdateAttempt();
-		Long currentTime = Long.valueOf(new Date().getTime());
+		Long currentTime = new Long(new Date().getTime());
 		if( lastAttempt!=null ) {
 			return currentTime.longValue() > lastAttempt.longValue()+(pendingTimeout.intValue()*1000);
 		}
